# VirtualFileSystem

./: CMakeLists.txt  README.md  mainFile.cpp
Source/: commandExecutor.cpp  directory.cpp  file.cpp  fileSystem.cpp  fileSystemComponent.cpp
Test/: testvfs.cpp
include/: commandExecutor.hpp  directory.hpp  file.hpp  fileSystem.hpp  fileSystemComponent.hpp
output/: main
